--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,337 @@
-.App {
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  /* font-family: "Roboto", sans-serif; */
+}
+
+body {
+  position: relative;
+  min-height: 100vh;
+  width: auto;
+  background: linear-gradient(45deg, #a3caeb 0%, #528ec4 50%, #01578a 100%);
+}
+
+body::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/513985/world.png");
+  background-position: center;
+  background-repeat: none;
+  background-size: cover;
+  opacity: 0.1;
+  z-index: -1;
+}
+body::after {
+  content: "";
+  position: fixed;
+  left: 0;
+  top: 0;
+  z-index: -1;
+  opacity: 0.2;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(180deg, rgba(0, 0, 0, 0.746) 0%, #000 100%);
+}
+*/
+/************************************************ADD CARD-COMPONENET***************************************************/
+.title {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+::placeholder {
+  padding-left: 0.2rem;
+}
+.addcard-title {
+  font-family: Open sans, sans-serif;
+  text-align: center;
+  padding-top: 2rem;
+  padding-bottom: 0.4rem;
+}
+.error-text {
+  text-align: center;
+  font-size: 1rem;
+}
+.error {
+  text-align: center;
+  font-family: Open sans, sans-serif;
+  padding: 0.5rem;
+  border: 2px solid rgb(124, 8, 8);
+  color: #fff;
+  background-color: rgb(124, 8, 8);
+  width: 93%;
+}
+
+.add-card {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.card-comp {
+  padding-left: 3rem;
+}
+.form-container {
+  width: 520px;
+  height: 550px;
+  margin-top: 5rem;
+  padding-left: 1.8rem;
+  padding-top: 2rem;
+  background-color: transparent;
+  display: flex;
+  flex-direction: column;
+  margin-left: 5rem;
+}
+
+.cart-number,
+.cart-name {
+  width: 460px;
+  height: 49px;
+}
+
+option {
+  font-style: normal;
+  font-weight: 300;
+  font-size: 15px;
+  line-height: 50px;
+  letter-spacing: 0.05em;
+  padding-left: 6px;
+}
+
+.input-two {
+  display: flex;
+}
+.date-box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.pipe {
+  padding: 0 4px;
+}
+.month,
+.year {
+  width: 2.5rem;
+}
+.slash {
+  font-size: 2rem;
+  font-weight: none;
+  color: rgba(8, 8, 8, 0.589);
+}
+.cvc {
+  margin-left: 1.8rem;
+}
+
+.vendor,
+.input-two,
+.name {
+  padding-top: 1rem;
+}
+.inputtwo {
+  height: 49px;
+}
+
+.btn {
+  margin: 3rem 0 0.4rem 0;
+}
+
+.form-btn {
+  width: 94%;
+  border-radius: 5px;
+  border: none;
+  background-color: transparent;
+  color: rgb(230, 230, 230);
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  background-color: rgb(7, 61, 112);
+  transition: box-shadow 300ms ease-in-out, color 300ms ease-in-out;
+}
+
+.form-btn:hover {
+  box-shadow: 0 0 2px 2px rgb(7, 53, 97);
+}
+
+.bttn {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/*************************************************** Betalykort-component *************************************************/
+.mastercard {
+  background: linear-gradient(-120deg, #ff9900, #d14242);
+  z-index: 1;
+}
+.visa {
+  background: linear-gradient(25deg, #0f509e, #1399cd);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.express {
+  background: linear-gradient(30deg, #297a5a, #83d3af);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.card {
+  text-align: center;
+}
+
+.notActiv-credit {
+  padding: 1.5rem;
+  margin: auto;
+  width: 360px;
+  height: 14rem;
+  -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 1);
+  -moz-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 1);
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 1);
+  border: 1px solid transparent;
+  border-radius: 7px;
+}
+
+.credit-cart {
+  padding: 1.5rem;
+  margin: auto;
+  width: 360px;
+  height: 14rem;
+  -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 1);
+  -moz-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 1);
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 1);
+  border: 1px solid transparent;
+  border-radius: 7px;
+  transition-duration: 0.3s;
+  transition-timing-function: linear;
+  cursor: pointer;
+}
+.credit-cart:hover {
+  transform: scale(1.5);
+}
+.chip {
+  width: 50px;
+  height: 39px;
+  transform: translateY(-1px);
+  background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/430478/chip.jpg");
+  background-size: 124.5%;
+  background-position: center;
+  border-radius: 10px;
+}
+/* .card:hover {
+  z-index: 200 !important;
+} */
+
+.card-logo,
+.card-info {
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
+}
+
+.card-nr,
+.namecard,
+.betal-card-name,
+.betal-card-date,
+.betal-card-cvc {
+  background-color: transparent;
+  border: none;
+}
+
+.cardnr {
+  font-size: 11px;
+  font-style: normal;
+  font-weight: 300;
+  letter-spacing: 0.05em;
+}
+
+label {
+  text-transform: uppercase;
+  font-style: normal;
+  font-size: 11px;
+  text-shadow: none;
+  font-family: Open sans, sans-serif;
+  color: rgba(255, 255, 255, 0.6);
+}
+.holder {
+  margin-right: 3rem;
+}
+.card-nr {
+  width: 100%;
+  font-size: 29px;
+  font-weight: none;
+  padding: 1.4rem 0;
+  font-family: "Share Tech Mono", monospace;
+  color: transparent;
+  text-shadow: -2px -2px 2px rgba(255, 255, 255, 1),
+    1px 1px 1px rgba(59, 59, 59, 0.9), 2px -2px 4px rgba(255, 255, 255, 1),
+    -2px -2px 2px rgba(49, 49, 49, 0.9), -2px 2px 1px rgba(47, 47, 47, 0.9);
+  -webkit-text-stroke: 2px rgba(0, 0, 0, 0.4);
+  z-index: 999;
+}
+.betal-card-name {
+  color: #000;
+}
+.betal-card-cvc,
+.betal-card-date,
+.betal-card-name {
+  font-family: Open sans, sans-serif;
+  font-weight: none;
+  text-shadow: -1px -1px 1px rgb(255, 255, 255),
+    1px 1px 1px rgba(156, 156, 156, 0.2), 2px -2px 4px rgb(175, 175, 175),
+    -1px -1px 1px rgba(255, 255, 255, 0.3), -1px 1px 1px rgb(124, 124, 124);
+  -webkit-text-stroke: 2px rgba(0, 0, 0, 0.4);
+  letter-spacing: 0.09em;
+}
+
+.betal-card-date {
+  font-size: 14px;
+  width: 65px;
+}
+
+.betal-card-cvc {
+  text-align: center;
+  width: 40px;
+  padding-left: 2px;
+}
+
+.expiry-cvc {
+  display: flex;
+}
+
+/*************************************************Home******************************************************** */
+
+img {
+  width: 20rem;
+  padding: 2rem;
+}
+
+.notactive-card {
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin: 3.5rem 0 2rem 0;
+  display: grid;
+  grid-template-columns: repeat(4, 150px);
 }
 
-.App-link {
-  color: #61dafb;
+.add-btn-home {
+  width: 15%;
+  font-family: "Arial", Helvetica, sans-serif !important;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.disable {
+  width: 21%;
+  background-color: #b92c33a2;
+  color: rgb(255, 255, 255);
+  cursor: not-allowed;
+}
+
+.fas {
+  color: rgb(138, 13, 13);
+  font-size: 25px;
+  z-index: 200;
+  cursor: pointer;
 }
